--- a/panda.html
+++ b/panda.html
@@ -94,6 +94,29 @@
             </a>
           </div>
     </div>
+
+    <div class="container catgories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat1">
+                <h1>watch</h1>
+                <img src="images/panda-commerce/categories/watch.png" alt="">
+            </div>
+        </div>
+            <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat2">
+                <h1>bag</h1>
+                <img src="images/panda-commerce/categories/bag.png" alt="">
+               </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat3">
+                    <h1>shoes</h1>
+                    <img src="images/panda-commerce/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
